src/objects/CVMA_Message__c/CVMA_Message__c.object-meta.xml
<CustomObject>
    <label>CVMA Message</label>
    <nameField>
        <displayFormat>MSG-{000000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CVMA Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>