src/objects/CVMA_Message__c/fields/Is_Officer_Message__c.field-meta.xml
<CustomField>
    <fullName>Is_Officer_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Officer Message</label>
    <type>Checkbox</type>
</CustomField>