src/objects/CVMA_Message__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Received Messages</relationshipLabel>
    <relationshipName>Received_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>