src/objects/CVMA_Message__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sender</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sent Messages</relationshipLabel>
    <relationshipName>Sent_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>