src/objects/CVMA_Message__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
                <default>true</default>
                <label>Sent</label>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>